--- a/arch/arm64/configs/slider_gki_defconfig
+++ b/arch/arm64/configs/slider_gki_defconfig
@@ -707,6 +707,7 @@ CONFIG_TRACE_MMIO_ACCESS=y
 CONFIG_TRACEFS_DISABLE_AUTOMOUNT=y
 CONFIG_HIST_TRIGGERS=y
 CONFIG_PID_IN_CONTEXTIDR=y
+CONFIG_FUNCTION_ERROR_INJECTION=y
 # CONFIG_RUNTIME_TESTING_MENU is not set
 CONFIG_LOG_BUF_SHIFT=22
 CONFIG_SOC_GOOGLE=y
